--- a/pom.xml
+++ b/pom.xml
@@ -1,12 +1,12 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<!-- build triggers -->
+	
 	<groupId>com.mt</groupId>
 	<artifactId>maven-web-application</artifactId>
 	<packaging>war</packaging>
 	
-	<version>0.0.2</version> 
+	<version>0.0.2-SNAPSHOTS</version> 
 	
 	<name>maven-web-application</name>
 
@@ -22,9 +22,9 @@
 		<spring.version>5.1.2.RELEASE</spring.version>
 		<junit.version>4.11</junit.version>
 		<log4j.version>1.2.17</log4j.version>
-		<sonar.host.url>http://localhost:9000/</sonar.host.url> 
-		<sonar.login>admin</sonar.login>
-		<sonar.password>sonarpat35</sonar.password> 
+		<sonar.host.url>http://3.141.30.5:9000/</sonar.host.url>
+		<sonar.login>Devopspat</sonar.login>
+		<sonar.password>sonarpat35</sonar.password>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 	</properties>
@@ -89,26 +89,26 @@
 			<artifactId>javax.servlet-api</artifactId>
 			<version>3.1.0</version>
 			<scope>provided</scope>
-		</dependency>	
-	</dependencies>	
-
+		</dependency>
+		
+	</dependencies>
 	<distributionManagement>
 	    <repository>
 	      <id>nexus</id>
 	      <name>Landmark Technologies Releases Nexus Repository</name>
-	      <url>http://localhost:8081/repository/TwithTReleases/</url>
+	      <url>http://3.15.191.215:8081/repository/webapplicationpatReleases/</url>
 	    </repository>
 	    
 	    <snapshotRepository>
 	      <id>nexus</id>
-	      <name>Landmark Technologies Snapshot Nexus Repository</name>
-	      <url>http://localhost:8081/repository/TwithTSnapshots/</url>
+	      <name>Landmark Technologies Snapshot Nexus Repository </name>
+	      <url>http://3.15.191.215:8081/repository/webapplicationpatSnapshots/</url>
 	    </snapshotRepository>
 	    
 	</distributionManagement>
 	
 	<build>
-		<finalName>tesla</finalName>
+		<finalName>TwTechnology-web-app</finalName>
 		
 		<plugins>
 			<plugin>
